src/objects/netsuite_conn__Celigo_Item_Fulfillment__c.object
<CustomObject>
    <fields>
        <fullName>netsuite_conn__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Item Fulfillments</relationshipLabel>
        <relationshipName>Item_Fulfillments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Created_From__c</fullName>
        <label>Created From</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Handling_Cost__c</fullName>
        <label>Handling Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Memo__c</fullName>
        <label>Memo</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__NetSuite_Id__c</fullName>
        <externalId>true</externalId>
        <label>NetSuite Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>netsuite_conn__Ship_Via__c</fullName>
        <label>Ship Via</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Shipping_Cost__c</fullName>
        <label>Shipping Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Picked</fullName>
                </value>
                <value>
                    <fullName>Packed</fullName>
                </value>
                <value>
                    <fullName>Shipped</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Item Fulfillment</label>
    <nameField>
        <label>Item Fulfillment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Item Fulfillments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>